--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -1,17 +1,17 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
+gavin:
+  name: Gavin Sproles
+  title: Lead Blockchain Developer
+  url: https://github.com/gavinspr
+  image_url: img/gavin.png
 
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
+spencer:
+  name: Spencer Pope
+  title: Lead Front End Developer
   url: https://github.com/yangshun
   image_url: https://github.com/yangshun.png
 
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
+chuck:
+  name: Charlie Frail
+  title: Creative Director 
   url: https://sebastienlorber.com
   image_url: https://github.com/slorber.png
