fix blog images;; clean img dir

--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -2,16 +2,16 @@ gavin:
   name: Gavin Sproles
   title: Lead Blockchain Developer
   url: https://github.com/gavinspr
-  image_url: ../static/img/gavin.png
+  image_url: https://legendarylabs.net/img/team/gavin.png
 
 spencer:
   name: Spencer Pope
   title: Lead Front End Developer
   url: https://github.com/yangshun
-  image_url: ../static/img/spencer.jpg
+  image_url: https://legendarylabs.net/img/team/spencer.jpg
 
 chuck:
   name: Charlie Frail
   title: Creative Director 
   url: https://github.com/charliefrail
-  image_url: ../static/img/chuck.jpg
+  image_url: https://legendarylabs.net/img/team/chuck.jpg
